# Lab02

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
NotToMerge/: logistics.map.md  logistics_map.json
deploy/mongodb/: mongodb-compose.yaml
include/server/: circuitCalculator.hpp  configLoader.hpp  envConfig.hpp  httpManager.hpp  maxFlowCalculator.hpp  mongoDatabase.hpp  serverApp.hpp  utils.hpp
scripts/: client.sh
src/server/: circuitCalculator.cpp  configLoader.cpp  envConfig.cpp  httpManager.cpp  main.cpp  maxFlowCalculator.cpp  mongoDatabase.cpp  serverApp.cpp
